[package]
name = "nom-config-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
regex = "1.9.1"
serde = { version = "1.0.163", features = ["derive"] }
walkdir = "2.3.3"
serde_json = "1.0.96"


[features]
# default = ["display", "hash", "serialize", "deserialize"]
display = []
hash = []
serialize = []
deserialize = []