[package]
name = "nom-config-in"
version = "0.1.0"
edition = "2021"
authors = ["yann Prono"]
repository = "https://github.com/Mcdostone/nom-config-in"
homepage = "https://github.com/Mcdostone/nom-config-in"
license = "MIT"
readme = "README.md"
description = "A Kconfig parser"
categories = ["parsing"]
keywords = ["parser",  "parsing", "config.in", "linux-kernel"]
rust-version = "1.56"
exclude = [
    ".github",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
regex = "1.9.1"
serde = { version = "1.0.163", features = ["derive"] }
walkdir = "2.3.3"
serde_json = "1.0.96"

[features]
# default = ["display", "hash", "serialize", "deserialize"]
# display = []
# hash = []
# serialize = []
# deserialize = []